components/apps/komga/komga-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: komga
    app.kubernetes.io/instance: komga
    app.kubernetes.io/name: komga
  name: komga
  namespace: komga
spec:
  ports:
  - name: komga
    port: 10085
  selector:
    app: komga
    app.kubernetes.io/instance: komga
    app.kubernetes.io/name: komga
  type: ClusterIP
