components/apps/komga/komga-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: komga
  namespace: komga
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`komga.redcomet.ca`) && (PathPrefix(`/`) || PathPrefix(`/dashboard`))
    services:
    - kind: Service
      name: komga
      port: 10085
